LU-8842 mdc: Make IT_OPEN take lookup bits lock

Commit 8d161d44214f907a9f2d9cf5a79cd2c83de995c3 from
http://review.whamcloud.com/#/c/10205/3 accidentally
changed handling of IT_OPEN, making it take the
MDS_INODELOCK_UPDATE bits lock instead of
MDS_INODELOCK_LOOKUP.

This does not cause any known bugs.

Signed-off-by: Patrick Farrell <paf@cray.com>
Change-Id: Ia7269d8907ad41b6d53c8b106f33cab8afecb514
Reviewed-on: https://review.whamcloud.com/23797
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>